src/core/pbrtparse.output
Terminals unused in grammar

   ID


Grammar

    0 $accept: start $end

    1 start: pbrt_stmt_list

    2 array_init: /* empty */

    3 string_array_init: /* empty */

    4 num_array_init: /* empty */

    5 array: string_array
    6      | num_array

    7 string_array: array_init LBRACK string_list RBRACK
    8             | single_element_string_array

    9 single_element_string_array: array_init string_list_entry

   10 string_list: string_list string_list_entry
   11            | string_list_entry

   12 string_list_entry: string_array_init STRING

   13 num_array: array_init LBRACK num_list RBRACK
   14          | single_element_num_array

   15 single_element_num_array: array_init num_list_entry

   16 num_list: num_list num_list_entry
   17         | num_list_entry

   18 num_list_entry: num_array_init NUM

   19 paramlist: paramlist_init paramlist_contents

   20 paramlist_init: /* empty */

   21 paramlist_contents: paramlist_entry paramlist_contents
   22                   | /* empty */

   23 paramlist_entry: STRING array

   24 pbrt_stmt_list: pbrt_stmt_list pbrt_stmt
   25               | pbrt_stmt

   26 pbrt_stmt: ACCELERATOR STRING paramlist
   27          | ACTIVETRANSFORM ALL
   28          | ACTIVETRANSFORM ENDTIME
   29          | ACTIVETRANSFORM STARTTIME
   30          | AREALIGHTSOURCE STRING paramlist
   31          | ATTRIBUTEBEGIN
   32          | ATTRIBUTEEND
   33          | CAMERA STRING paramlist
   34          | CONCATTRANSFORM num_array
   35          | COORDINATESYSTEM STRING
   36          | COORDSYSTRANSFORM STRING
   37          | FILM STRING paramlist
   38          | IDENTITY
   39          | INCLUDE STRING
   40          | LIGHTSOURCE STRING paramlist
   41          | LOOKAT NUM NUM NUM NUM NUM NUM NUM NUM NUM
   42          | MAKENAMEDMATERIAL STRING paramlist
   43          | MAKENAMEDMEDIUM STRING paramlist
   44          | MATERIAL STRING paramlist
   45          | MEDIUMINTERFACE STRING
   46          | MEDIUMINTERFACE STRING STRING
   47          | NAMEDMATERIAL STRING
   48          | OBJECTBEGIN STRING
   49          | OBJECTEND
   50          | OBJECTINSTANCE STRING
   51          | PIXELFILTER STRING paramlist
   52          | REVERSEORIENTATION
   53          | ROTATE NUM NUM NUM NUM
   54          | SAMPLER STRING paramlist
   55          | SCALE NUM NUM NUM
   56          | SHAPE STRING paramlist
   57          | INTEGRATOR STRING paramlist
   58          | TEXTURE STRING STRING STRING paramlist
   59          | TRANSFORMBEGIN
   60          | TRANSFORMEND
   61          | TRANSFORMTIMES NUM NUM
   62          | TRANSFORM num_array
   63          | TRANSLATE NUM NUM NUM
   64          | WORLDBEGIN
   65          | WORLDEND


Terminals, with rules where they appear

$end (0) 0
error (256)
STRING (258) 12 23 26 30 33 35 36 37 39 40 42 43 44 45 46 47 48 50
    51 54 56 57 58
ID (259)
NUM (260) 18 41 53 55 61 63
LBRACK (261) 7 13
RBRACK (262) 7 13
ACCELERATOR (263) 26
ACTIVETRANSFORM (264) 27 28 29
ALL (265) 27
AREALIGHTSOURCE (266) 30
ATTRIBUTEBEGIN (267) 31
ATTRIBUTEEND (268) 32
CAMERA (269) 33
CONCATTRANSFORM (270) 34
COORDINATESYSTEM (271) 35
COORDSYSTRANSFORM (272) 36
ENDTIME (273) 28
FILM (274) 37
IDENTITY (275) 38
INCLUDE (276) 39
LIGHTSOURCE (277) 40
LOOKAT (278) 41
MAKENAMEDMATERIAL (279) 42
MAKENAMEDMEDIUM (280) 43
MATERIAL (281) 44
MEDIUMINTERFACE (282) 45 46
NAMEDMATERIAL (283) 47
OBJECTBEGIN (284) 48
OBJECTEND (285) 49
OBJECTINSTANCE (286) 50
PIXELFILTER (287) 51
REVERSEORIENTATION (288) 52
ROTATE (289) 53
SAMPLER (290) 54
SCALE (291) 55
SHAPE (292) 56
STARTTIME (293) 29
INTEGRATOR (294) 57
TEXTURE (295) 58
TRANSFORMBEGIN (296) 59
TRANSFORMEND (297) 60
TRANSFORMTIMES (298) 61
TRANSFORM (299) 62
TRANSLATE (300) 63
WORLDBEGIN (301) 64
WORLDEND (302) 65
HIGH_PRECEDENCE (303)


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
start (50)
    on left: 1, on right: 0
array_init (51)
    on left: 2, on right: 7 9 13 15
string_array_init (52)
    on left: 3, on right: 12
num_array_init (53)
    on left: 4, on right: 18
array (54)
    on left: 5 6, on right: 23
string_array (55)
    on left: 7 8, on right: 5
single_element_string_array (56)
    on left: 9, on right: 8
string_list (57)
    on left: 10 11, on right: 7 10
string_list_entry (58)
    on left: 12, on right: 9 10 11
num_array (59)
    on left: 13 14, on right: 6 34 62
single_element_num_array (60)
    on left: 15, on right: 14
num_list (61)
    on left: 16 17, on right: 13 16
num_list_entry (62)
    on left: 18, on right: 15 16 17
paramlist (63)
    on left: 19, on right: 26 30 33 37 40 42 43 44 51 54 56 57 58
paramlist_init (64)
    on left: 20, on right: 19
paramlist_contents (65)
    on left: 21 22, on right: 19 21
paramlist_entry (66)
    on left: 23, on right: 21
pbrt_stmt_list (67)
    on left: 24 25, on right: 1 24
pbrt_stmt (68)
    on left: 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43
    44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
    65, on right: 24 25


State 0

    0 $accept: . start $end

    ACCELERATOR         shift, and go to state 1
    ACTIVETRANSFORM     shift, and go to state 2
    AREALIGHTSOURCE     shift, and go to state 3
    ATTRIBUTEBEGIN      shift, and go to state 4
    ATTRIBUTEEND        shift, and go to state 5
    CAMERA              shift, and go to state 6
    CONCATTRANSFORM     shift, and go to state 7
    COORDINATESYSTEM    shift, and go to state 8
    COORDSYSTRANSFORM   shift, and go to state 9
    FILM                shift, and go to state 10
    IDENTITY            shift, and go to state 11
    INCLUDE             shift, and go to state 12
    LIGHTSOURCE         shift, and go to state 13
    LOOKAT              shift, and go to state 14
    MAKENAMEDMATERIAL   shift, and go to state 15
    MAKENAMEDMEDIUM     shift, and go to state 16
    MATERIAL            shift, and go to state 17
    MEDIUMINTERFACE     shift, and go to state 18
    NAMEDMATERIAL       shift, and go to state 19
    OBJECTBEGIN         shift, and go to state 20
    OBJECTEND           shift, and go to state 21
    OBJECTINSTANCE      shift, and go to state 22
    PIXELFILTER         shift, and go to state 23
    REVERSEORIENTATION  shift, and go to state 24
    ROTATE              shift, and go to state 25
    SAMPLER             shift, and go to state 26
    SCALE               shift, and go to state 27
    SHAPE               shift, and go to state 28
    INTEGRATOR          shift, and go to state 29
    TEXTURE             shift, and go to state 30
    TRANSFORMBEGIN      shift, and go to state 31
    TRANSFORMEND        shift, and go to state 32
    TRANSFORMTIMES      shift, and go to state 33
    TRANSFORM           shift, and go to state 34
    TRANSLATE           shift, and go to state 35
    WORLDBEGIN          shift, and go to state 36
    WORLDEND            shift, and go to state 37

    start           go to state 38
    pbrt_stmt_list  go to state 39
    pbrt_stmt       go to state 40


State 1

   26 pbrt_stmt: ACCELERATOR . STRING paramlist

    STRING  shift, and go to state 41


State 2

   27 pbrt_stmt: ACTIVETRANSFORM . ALL
   28          | ACTIVETRANSFORM . ENDTIME
   29          | ACTIVETRANSFORM . STARTTIME

    ALL        shift, and go to state 42
    ENDTIME    shift, and go to state 43
    STARTTIME  shift, and go to state 44


State 3

   30 pbrt_stmt: AREALIGHTSOURCE . STRING paramlist

    STRING  shift, and go to state 45


State 4

   31 pbrt_stmt: ATTRIBUTEBEGIN .

    $default  reduce using rule 31 (pbrt_stmt)


State 5

   32 pbrt_stmt: ATTRIBUTEEND .

    $default  reduce using rule 32 (pbrt_stmt)


State 6

   33 pbrt_stmt: CAMERA . STRING paramlist

    STRING  shift, and go to state 46


State 7

   34 pbrt_stmt: CONCATTRANSFORM . num_array

    $default  reduce using rule 2 (array_init)

    array_init                go to state 47
    num_array                 go to state 48
    single_element_num_array  go to state 49


State 8

   35 pbrt_stmt: COORDINATESYSTEM . STRING

    STRING  shift, and go to state 50


State 9

   36 pbrt_stmt: COORDSYSTRANSFORM . STRING

    STRING  shift, and go to state 51


State 10

   37 pbrt_stmt: FILM . STRING paramlist

    STRING  shift, and go to state 52


State 11

   38 pbrt_stmt: IDENTITY .

    $default  reduce using rule 38 (pbrt_stmt)


State 12

   39 pbrt_stmt: INCLUDE . STRING

    STRING  shift, and go to state 53


State 13

   40 pbrt_stmt: LIGHTSOURCE . STRING paramlist

    STRING  shift, and go to state 54


State 14

   41 pbrt_stmt: LOOKAT . NUM NUM NUM NUM NUM NUM NUM NUM NUM

    NUM  shift, and go to state 55


State 15

   42 pbrt_stmt: MAKENAMEDMATERIAL . STRING paramlist

    STRING  shift, and go to state 56


State 16

   43 pbrt_stmt: MAKENAMEDMEDIUM . STRING paramlist

    STRING  shift, and go to state 57


State 17

   44 pbrt_stmt: MATERIAL . STRING paramlist

    STRING  shift, and go to state 58


State 18

   45 pbrt_stmt: MEDIUMINTERFACE . STRING
   46          | MEDIUMINTERFACE . STRING STRING

    STRING  shift, and go to state 59


State 19

   47 pbrt_stmt: NAMEDMATERIAL . STRING

    STRING  shift, and go to state 60


State 20

   48 pbrt_stmt: OBJECTBEGIN . STRING

    STRING  shift, and go to state 61


State 21

   49 pbrt_stmt: OBJECTEND .

    $default  reduce using rule 49 (pbrt_stmt)


State 22

   50 pbrt_stmt: OBJECTINSTANCE . STRING

    STRING  shift, and go to state 62


State 23

   51 pbrt_stmt: PIXELFILTER . STRING paramlist

    STRING  shift, and go to state 63


State 24

   52 pbrt_stmt: REVERSEORIENTATION .

    $default  reduce using rule 52 (pbrt_stmt)


State 25

   53 pbrt_stmt: ROTATE . NUM NUM NUM NUM

    NUM  shift, and go to state 64


State 26

   54 pbrt_stmt: SAMPLER . STRING paramlist

    STRING  shift, and go to state 65


State 27

   55 pbrt_stmt: SCALE . NUM NUM NUM

    NUM  shift, and go to state 66


State 28

   56 pbrt_stmt: SHAPE . STRING paramlist

    STRING  shift, and go to state 67


State 29

   57 pbrt_stmt: INTEGRATOR . STRING paramlist

    STRING  shift, and go to state 68


State 30

   58 pbrt_stmt: TEXTURE . STRING STRING STRING paramlist

    STRING  shift, and go to state 69


State 31

   59 pbrt_stmt: TRANSFORMBEGIN .

    $default  reduce using rule 59 (pbrt_stmt)


State 32

   60 pbrt_stmt: TRANSFORMEND .

    $default  reduce using rule 60 (pbrt_stmt)


State 33

   61 pbrt_stmt: TRANSFORMTIMES . NUM NUM

    NUM  shift, and go to state 70


State 34

   62 pbrt_stmt: TRANSFORM . num_array

    $default  reduce using rule 2 (array_init)

    array_init                go to state 47
    num_array                 go to state 71
    single_element_num_array  go to state 49


State 35

   63 pbrt_stmt: TRANSLATE . NUM NUM NUM

    NUM  shift, and go to state 72


State 36

   64 pbrt_stmt: WORLDBEGIN .

    $default  reduce using rule 64 (pbrt_stmt)


State 37

   65 pbrt_stmt: WORLDEND .

    $default  reduce using rule 65 (pbrt_stmt)


State 38

    0 $accept: start . $end

    $end  shift, and go to state 73


State 39

    1 start: pbrt_stmt_list .
   24 pbrt_stmt_list: pbrt_stmt_list . pbrt_stmt

    ACCELERATOR         shift, and go to state 1
    ACTIVETRANSFORM     shift, and go to state 2
    AREALIGHTSOURCE     shift, and go to state 3
    ATTRIBUTEBEGIN      shift, and go to state 4
    ATTRIBUTEEND        shift, and go to state 5
    CAMERA              shift, and go to state 6
    CONCATTRANSFORM     shift, and go to state 7
    COORDINATESYSTEM    shift, and go to state 8
    COORDSYSTRANSFORM   shift, and go to state 9
    FILM                shift, and go to state 10
    IDENTITY            shift, and go to state 11
    INCLUDE             shift, and go to state 12
    LIGHTSOURCE         shift, and go to state 13
    LOOKAT              shift, and go to state 14
    MAKENAMEDMATERIAL   shift, and go to state 15
    MAKENAMEDMEDIUM     shift, and go to state 16
    MATERIAL            shift, and go to state 17
    MEDIUMINTERFACE     shift, and go to state 18
    NAMEDMATERIAL       shift, and go to state 19
    OBJECTBEGIN         shift, and go to state 20
    OBJECTEND           shift, and go to state 21
    OBJECTINSTANCE      shift, and go to state 22
    PIXELFILTER         shift, and go to state 23
    REVERSEORIENTATION  shift, and go to state 24
    ROTATE              shift, and go to state 25
    SAMPLER             shift, and go to state 26
    SCALE               shift, and go to state 27
    SHAPE               shift, and go to state 28
    INTEGRATOR          shift, and go to state 29
    TEXTURE             shift, and go to state 30
    TRANSFORMBEGIN      shift, and go to state 31
    TRANSFORMEND        shift, and go to state 32
    TRANSFORMTIMES      shift, and go to state 33
    TRANSFORM           shift, and go to state 34
    TRANSLATE           shift, and go to state 35
    WORLDBEGIN          shift, and go to state 36
    WORLDEND            shift, and go to state 37

    $default  reduce using rule 1 (start)

    pbrt_stmt  go to state 74


State 40

   25 pbrt_stmt_list: pbrt_stmt .

    $default  reduce using rule 25 (pbrt_stmt_list)


State 41

   26 pbrt_stmt: ACCELERATOR STRING . paramlist

    $default  reduce using rule 20 (paramlist_init)

    paramlist       go to state 75
    paramlist_init  go to state 76


State 42

   27 pbrt_stmt: ACTIVETRANSFORM ALL .

    $default  reduce using rule 27 (pbrt_stmt)


State 43

   28 pbrt_stmt: ACTIVETRANSFORM ENDTIME .

    $default  reduce using rule 28 (pbrt_stmt)


State 44

   29 pbrt_stmt: ACTIVETRANSFORM STARTTIME .

    $default  reduce using rule 29 (pbrt_stmt)


State 45

   30 pbrt_stmt: AREALIGHTSOURCE STRING . paramlist

    $default  reduce using rule 20 (paramlist_init)

    paramlist       go to state 77
    paramlist_init  go to state 76


State 46

   33 pbrt_stmt: CAMERA STRING . paramlist

    $default  reduce using rule 20 (paramlist_init)

    paramlist       go to state 78
    paramlist_init  go to state 76


State 47

   13 num_array: array_init . LBRACK num_list RBRACK
   15 single_element_num_array: array_init . num_list_entry

    LBRACK  shift, and go to state 79

    $default  reduce using rule 4 (num_array_init)

    num_array_init  go to state 80
    num_list_entry  go to state 81


State 48

   34 pbrt_stmt: CONCATTRANSFORM num_array .

    $default  reduce using rule 34 (pbrt_stmt)


State 49

   14 num_array: single_element_num_array .

    $default  reduce using rule 14 (num_array)


State 50

   35 pbrt_stmt: COORDINATESYSTEM STRING .

    $default  reduce using rule 35 (pbrt_stmt)


State 51

   36 pbrt_stmt: COORDSYSTRANSFORM STRING .

    $default  reduce using rule 36 (pbrt_stmt)


State 52

   37 pbrt_stmt: FILM STRING . paramlist

    $default  reduce using rule 20 (paramlist_init)

    paramlist       go to state 82
    paramlist_init  go to state 76


State 53

   39 pbrt_stmt: INCLUDE STRING .

    $default  reduce using rule 39 (pbrt_stmt)


State 54

   40 pbrt_stmt: LIGHTSOURCE STRING . paramlist

    $default  reduce using rule 20 (paramlist_init)

    paramlist       go to state 83
    paramlist_init  go to state 76


State 55

   41 pbrt_stmt: LOOKAT NUM . NUM NUM NUM NUM NUM NUM NUM NUM

    NUM  shift, and go to state 84


State 56

   42 pbrt_stmt: MAKENAMEDMATERIAL STRING . paramlist

    $default  reduce using rule 20 (paramlist_init)

    paramlist       go to state 85
    paramlist_init  go to state 76


State 57

   43 pbrt_stmt: MAKENAMEDMEDIUM STRING . paramlist

    $default  reduce using rule 20 (paramlist_init)

    paramlist       go to state 86
    paramlist_init  go to state 76


State 58

   44 pbrt_stmt: MATERIAL STRING . paramlist

    $default  reduce using rule 20 (paramlist_init)

    paramlist       go to state 87
    paramlist_init  go to state 76


State 59

   45 pbrt_stmt: MEDIUMINTERFACE STRING .
   46          | MEDIUMINTERFACE STRING . STRING

    STRING  shift, and go to state 88

    $default  reduce using rule 45 (pbrt_stmt)


State 60

   47 pbrt_stmt: NAMEDMATERIAL STRING .

    $default  reduce using rule 47 (pbrt_stmt)


State 61

   48 pbrt_stmt: OBJECTBEGIN STRING .

    $default  reduce using rule 48 (pbrt_stmt)


State 62

   50 pbrt_stmt: OBJECTINSTANCE STRING .

    $default  reduce using rule 50 (pbrt_stmt)


State 63

   51 pbrt_stmt: PIXELFILTER STRING . paramlist

    $default  reduce using rule 20 (paramlist_init)

    paramlist       go to state 89
    paramlist_init  go to state 76


State 64

   53 pbrt_stmt: ROTATE NUM . NUM NUM NUM

    NUM  shift, and go to state 90


State 65

   54 pbrt_stmt: SAMPLER STRING . paramlist

    $default  reduce using rule 20 (paramlist_init)

    paramlist       go to state 91
    paramlist_init  go to state 76


State 66

   55 pbrt_stmt: SCALE NUM . NUM NUM

    NUM  shift, and go to state 92


State 67

   56 pbrt_stmt: SHAPE STRING . paramlist

    $default  reduce using rule 20 (paramlist_init)

    paramlist       go to state 93
    paramlist_init  go to state 76


State 68

   57 pbrt_stmt: INTEGRATOR STRING . paramlist

    $default  reduce using rule 20 (paramlist_init)

    paramlist       go to state 94
    paramlist_init  go to state 76


State 69

   58 pbrt_stmt: TEXTURE STRING . STRING STRING paramlist

    STRING  shift, and go to state 95


State 70

   61 pbrt_stmt: TRANSFORMTIMES NUM . NUM

    NUM  shift, and go to state 96


State 71

   62 pbrt_stmt: TRANSFORM num_array .

    $default  reduce using rule 62 (pbrt_stmt)


State 72

   63 pbrt_stmt: TRANSLATE NUM . NUM NUM

    NUM  shift, and go to state 97


State 73

    0 $accept: start $end .

    $default  accept


State 74

   24 pbrt_stmt_list: pbrt_stmt_list pbrt_stmt .

    $default  reduce using rule 24 (pbrt_stmt_list)


State 75

   26 pbrt_stmt: ACCELERATOR STRING paramlist .

    $default  reduce using rule 26 (pbrt_stmt)


State 76

   19 paramlist: paramlist_init . paramlist_contents

    STRING  shift, and go to state 98

    $default  reduce using rule 22 (paramlist_contents)

    paramlist_contents  go to state 99
    paramlist_entry     go to state 100


State 77

   30 pbrt_stmt: AREALIGHTSOURCE STRING paramlist .

    $default  reduce using rule 30 (pbrt_stmt)


State 78

   33 pbrt_stmt: CAMERA STRING paramlist .

    $default  reduce using rule 33 (pbrt_stmt)


State 79

   13 num_array: array_init LBRACK . num_list RBRACK

    $default  reduce using rule 4 (num_array_init)

    num_array_init  go to state 80
    num_list        go to state 101
    num_list_entry  go to state 102


State 80

   18 num_list_entry: num_array_init . NUM

    NUM  shift, and go to state 103


State 81

   15 single_element_num_array: array_init num_list_entry .

    $default  reduce using rule 15 (single_element_num_array)


State 82

   37 pbrt_stmt: FILM STRING paramlist .

    $default  reduce using rule 37 (pbrt_stmt)


State 83

   40 pbrt_stmt: LIGHTSOURCE STRING paramlist .

    $default  reduce using rule 40 (pbrt_stmt)


State 84

   41 pbrt_stmt: LOOKAT NUM NUM . NUM NUM NUM NUM NUM NUM NUM

    NUM  shift, and go to state 104


State 85

   42 pbrt_stmt: MAKENAMEDMATERIAL STRING paramlist .

    $default  reduce using rule 42 (pbrt_stmt)


State 86

   43 pbrt_stmt: MAKENAMEDMEDIUM STRING paramlist .

    $default  reduce using rule 43 (pbrt_stmt)


State 87

   44 pbrt_stmt: MATERIAL STRING paramlist .

    $default  reduce using rule 44 (pbrt_stmt)


State 88

   46 pbrt_stmt: MEDIUMINTERFACE STRING STRING .

    $default  reduce using rule 46 (pbrt_stmt)


State 89

   51 pbrt_stmt: PIXELFILTER STRING paramlist .

    $default  reduce using rule 51 (pbrt_stmt)


State 90

   53 pbrt_stmt: ROTATE NUM NUM . NUM NUM

    NUM  shift, and go to state 105


State 91

   54 pbrt_stmt: SAMPLER STRING paramlist .

    $default  reduce using rule 54 (pbrt_stmt)


State 92

   55 pbrt_stmt: SCALE NUM NUM . NUM

    NUM  shift, and go to state 106


State 93

   56 pbrt_stmt: SHAPE STRING paramlist .

    $default  reduce using rule 56 (pbrt_stmt)


State 94

   57 pbrt_stmt: INTEGRATOR STRING paramlist .

    $default  reduce using rule 57 (pbrt_stmt)


State 95

   58 pbrt_stmt: TEXTURE STRING STRING . STRING paramlist

    STRING  shift, and go to state 107


State 96

   61 pbrt_stmt: TRANSFORMTIMES NUM NUM .

    $default  reduce using rule 61 (pbrt_stmt)


State 97

   63 pbrt_stmt: TRANSLATE NUM NUM . NUM

    NUM  shift, and go to state 108


State 98

   23 paramlist_entry: STRING . array

    $default  reduce using rule 2 (array_init)

    array_init                   go to state 109
    array                        go to state 110
    string_array                 go to state 111
    single_element_string_array  go to state 112
    num_array                    go to state 113
    single_element_num_array     go to state 49


State 99

   19 paramlist: paramlist_init paramlist_contents .

    $default  reduce using rule 19 (paramlist)


State 100

   21 paramlist_contents: paramlist_entry . paramlist_contents

    STRING  shift, and go to state 98

    $default  reduce using rule 22 (paramlist_contents)

    paramlist_contents  go to state 114
    paramlist_entry     go to state 100


State 101

   13 num_array: array_init LBRACK num_list . RBRACK
   16 num_list: num_list . num_list_entry

    RBRACK  shift, and go to state 115

    $default  reduce using rule 4 (num_array_init)

    num_array_init  go to state 80
    num_list_entry  go to state 116


State 102

   17 num_list: num_list_entry .

    $default  reduce using rule 17 (num_list)


State 103

   18 num_list_entry: num_array_init NUM .

    $default  reduce using rule 18 (num_list_entry)


State 104

   41 pbrt_stmt: LOOKAT NUM NUM NUM . NUM NUM NUM NUM NUM NUM

    NUM  shift, and go to state 117


State 105

   53 pbrt_stmt: ROTATE NUM NUM NUM . NUM

    NUM  shift, and go to state 118


State 106

   55 pbrt_stmt: SCALE NUM NUM NUM .

    $default  reduce using rule 55 (pbrt_stmt)


State 107

   58 pbrt_stmt: TEXTURE STRING STRING STRING . paramlist

    $default  reduce using rule 20 (paramlist_init)

    paramlist       go to state 119
    paramlist_init  go to state 76


State 108

   63 pbrt_stmt: TRANSLATE NUM NUM NUM .

    $default  reduce using rule 63 (pbrt_stmt)


State 109

    7 string_array: array_init . LBRACK string_list RBRACK
    9 single_element_string_array: array_init . string_list_entry
   13 num_array: array_init . LBRACK num_list RBRACK
   15 single_element_num_array: array_init . num_list_entry

    LBRACK  shift, and go to state 120

    NUM       reduce using rule 4 (num_array_init)
    $default  reduce using rule 3 (string_array_init)

    string_array_init  go to state 121
    num_array_init     go to state 80
    string_list_entry  go to state 122
    num_list_entry     go to state 81


State 110

   23 paramlist_entry: STRING array .

    $default  reduce using rule 23 (paramlist_entry)


State 111

    5 array: string_array .

    $default  reduce using rule 5 (array)


State 112

    8 string_array: single_element_string_array .

    $default  reduce using rule 8 (string_array)


State 113

    6 array: num_array .

    $default  reduce using rule 6 (array)


State 114

   21 paramlist_contents: paramlist_entry paramlist_contents .

    $default  reduce using rule 21 (paramlist_contents)


State 115

   13 num_array: array_init LBRACK num_list RBRACK .

    $default  reduce using rule 13 (num_array)


State 116

   16 num_list: num_list num_list_entry .

    $default  reduce using rule 16 (num_list)


State 117

   41 pbrt_stmt: LOOKAT NUM NUM NUM NUM . NUM NUM NUM NUM NUM

    NUM  shift, and go to state 123


State 118

   53 pbrt_stmt: ROTATE NUM NUM NUM NUM .

    $default  reduce using rule 53 (pbrt_stmt)


State 119

   58 pbrt_stmt: TEXTURE STRING STRING STRING paramlist .

    $default  reduce using rule 58 (pbrt_stmt)


State 120

    7 string_array: array_init LBRACK . string_list RBRACK
   13 num_array: array_init LBRACK . num_list RBRACK

    NUM       reduce using rule 4 (num_array_init)
    $default  reduce using rule 3 (string_array_init)

    string_array_init  go to state 121
    num_array_init     go to state 80
    string_list        go to state 124
    string_list_entry  go to state 125
    num_list           go to state 101
    num_list_entry     go to state 102


State 121

   12 string_list_entry: string_array_init . STRING

    STRING  shift, and go to state 126


State 122

    9 single_element_string_array: array_init string_list_entry .

    $default  reduce using rule 9 (single_element_string_array)


State 123

   41 pbrt_stmt: LOOKAT NUM NUM NUM NUM NUM . NUM NUM NUM NUM

    NUM  shift, and go to state 127


State 124

    7 string_array: array_init LBRACK string_list . RBRACK
   10 string_list: string_list . string_list_entry

    RBRACK  shift, and go to state 128

    $default  reduce using rule 3 (string_array_init)

    string_array_init  go to state 121
    string_list_entry  go to state 129


State 125

   11 string_list: string_list_entry .

    $default  reduce using rule 11 (string_list)


State 126

   12 string_list_entry: string_array_init STRING .

    $default  reduce using rule 12 (string_list_entry)


State 127

   41 pbrt_stmt: LOOKAT NUM NUM NUM NUM NUM NUM . NUM NUM NUM

    NUM  shift, and go to state 130


State 128

    7 string_array: array_init LBRACK string_list RBRACK .

    $default  reduce using rule 7 (string_array)


State 129

   10 string_list: string_list string_list_entry .

    $default  reduce using rule 10 (string_list)


State 130

   41 pbrt_stmt: LOOKAT NUM NUM NUM NUM NUM NUM NUM . NUM NUM

    NUM  shift, and go to state 131


State 131

   41 pbrt_stmt: LOOKAT NUM NUM NUM NUM NUM NUM NUM NUM . NUM

    NUM  shift, and go to state 132


State 132

   41 pbrt_stmt: LOOKAT NUM NUM NUM NUM NUM NUM NUM NUM NUM .

    $default  reduce using rule 41 (pbrt_stmt)
